--- a/2019/CHN/EXE/ads7871_v3s.INI
+++ b/2019/CHN/EXE/ads7871_v3s.INI
@@ -11,7 +11,7 @@ ConstantModeControlByte=32
 ConstantModeControlByteMASK=32
 ADJModeControlByte=16
 ADJModeControlByteMASK=16
-Language=1
+Language=0
 
 
 
@@ -48,7 +48,7 @@ MASK=12
 [RB2]
 Resist=91000
 CONTROLBYTE=12
-Scale=0.987299978733063
+Scale=1
 Offset=0
 MASK=12
 
@@ -63,7 +63,7 @@ MASK=12
 [RC1]
 Resist=75
 CONTROLBYTE=192
-Scale=1.00463998317719
+Scale=1
 Offset=0
 MASK=192
 
@@ -92,6 +92,6 @@ MASK=12
 [RC0]
 Resist=5
 CONTROLBYTE=128
-Scale=0.996450006961823
+Scale=1
 Offset=0
 MASK=192
